Bug 410861 - Wayland generic icon in window decoration and task switcher
Summary: Wayland generic icon in window decoration and task switcher
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: plasmathemeexplorer (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-12 21:38 UTC by Patrick Silva
Modified: 2022-01-16 14:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (13.96 KB, image/jpeg)
2019-08-12 21:38 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-08-12 21:38:57 UTC
Created attachment 122093 [details]
screenshot

SUMMARY


STEPS TO REPRODUCE
1. oepn Plasma theme explorer on Wayland
2. press alt+tab and hold alt key
3. 

OBSERVED RESULT
Wayland generic icon in task switcher and window decoration.

EXPECTED RESULT
plasma theme explorer shows its own icon in task switcher and windows decoration.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.3
Comment 1 Bug Janitor Service 2022-01-15 13:02:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-sdk/-/merge_requests/29
Comment 2 Nicolas Fella 2022-01-16 14:14:04 UTC
Git commit f5349c30f961f386135fe5f89769ba2fbf41f50a by Nicolas Fella.
Committed on 16/01/2022 at 14:12.
Pushed by nicolasfella into branch 'master'.

[plasmathemeexplorer] Set desktop file name

This fixes the window icon on Wayland

M  +1    -0    themeexplorer/src/main.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/f5349c30f961f386135fe5f89769ba2fbf41f50a
Comment 3 Nicolas Fella 2022-01-16 14:18:26 UTC
Git commit a14d93df71ddee97e49165aed0f0a9884d1dea1f by Nicolas Fella.
Committed on 16/01/2022 at 14:18.
Pushed by nicolasfella into branch 'Plasma/5.24'.

[plasmathemeexplorer] Set desktop file name

This fixes the window icon on Wayland
(cherry picked from commit f5349c30f961f386135fe5f89769ba2fbf41f50a)

M  +1    -0    themeexplorer/src/main.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/a14d93df71ddee97e49165aed0f0a9884d1dea1f