[plasmathemeexplorer] Set desktop file name

This fixes the window icon on Wayland

BUG: 410861
(cherry picked from commit f5349c30f961f386135fe5f89769ba2fbf41f50a)